# Bruno_Quadruped_Sim

./: LICENSE  README.md
UI/: controller.py  controller_window.py
bruno/: CMakeLists.txt  bruno_ik.py  package.xml  readme.md
bruno/config/: control.yaml
bruno/launch/: debug.launch.py  display.launch.py  gazebo.launch.py  spawn_robot_ros2.launch.py
bruno/meshes/: base_link.STL  bl_leg_link.STL  bl_shin_link.STL  bl_thigh_link.STL  br_leg_link.STL  br_shin_link.STL  br_thigh_link.STL  fl_leg_link.STL  fl_shin_link.STL  fl_thigh_link.STL  fr_leg_link.STL  fr_shin_link.STL  fr_thigh_link.STL  lidar_link.STL
bruno/src/: teleop.py
bruno/urdf/: bruno.csv  bruno.urdf.xacro
bruno_controller/: CMakeLists.txt  package.xml
bruno_controller/include/bruno_controller/: CrawlGaitController.hpp  GaitController.hpp  InverseKinematics.hpp  PIDController.hpp  RestController.hpp  RobotController.hpp  StandController.hpp  StateCommand.hpp  Transformations.hpp  TrotGaitController.hpp
bruno_controller/launch/: robot_controller.launch
bruno_controller/src/: main.cpp
bruno_controller/src/InverseKinematics/: InverseKinematics.cpp
bruno_controller/src/RobotController/: CrawlGaitController.cpp  GaitController.cpp  PIDController.cpp  RestController.cpp  RobotController.cpp  StandController.cpp  TrotGaitController.cpp
bruno_controller/src/RoboticsUtilities/: Transformations.cpp
joypad/: CMakeLists.txt  package.xml
joypad/launch/: ramped_joypad.launch
joypad/src/: ramped_joypad.py
odometry/: CMakeLists.txt  package.xml
odometry/include/odometry/: odometry_plugin.hpp
odometry/src/: odometry_plugin.cpp
